--- a/book/ml_principles/basics/training.ipynb
+++ b/book/ml_principles/basics/training.ipynb
@@ -158,7 +158,7 @@
                 ":icon: false\n",
                 ":class: simple\n",
                 "(target-batch-algorithm)=\n",
-                "We nemen terug het geval van ons eenvoudige \"airco model\" $E(d_i) = b$, waarbij we nu _niet_ kiezen voor een online benadering, maar voor een **_batch_ optimalisatie-algoritme** (**de optimalisatie gebeurt door _tegelijk_ naar _alle_ observaties in de training data te kijken**). Een simpele definitie van optimaliteit hierbij is om op zoek te gaan naar de waarde die de kleinste afwijking heeft ten opzichte van alle observaties. Om in deze context _sub-optimaliteit_ uit te drukken als de output van een _Loss_ functie, wordt hier gekozen[^mathf] voor de zogenaamde **Sum of Squared Errors (SSE)** functie met als algemene vorm:\n",
+                "We nemen terug het geval van ons eenvoudige \"airco model\" $E(d_i) = b$, waarbij we nu _niet_ kiezen voor een online benadering, maar voor een **_batch_ optimalisatie-algoritme** (**de optimalisatie gebeurt door _tegelijk_ naar _alle_ observaties in de training data te kijken**). Een simpele definitie van optimaliteit hierbij is om op zoek te gaan naar de waarde die de kleinste afwijking heeft ten opzichte van alle observaties. Om in deze context _sub-optimaliteit_ uit te drukken als de output van een _Loss_ functie, wordt hier gekozen voor de zogenaamde **Sum of Squared Errors (SSE)** functie met als algemene vorm:\n",
                 "$$\n",
                 "J_{SSE}(f(\\pmb{x}); \\pmb{y}) = \\sum_{i=1}^M(y_i-f(x_i))^2\n",
                 "$$\n",
@@ -173,7 +173,6 @@
                 "J_{SSE}(\\hat{b}; \\pmb{d}) = \\sum_{i=1}^M(d_i-\\frac{\\sum_{i=1}^M d_i}{M-1})^2\n",
                 "$$\n",
                 "\n",
-                "[^mathf]: Om redenen die aan bod komen in de cursus Mathematical Foundations.\n",
                 ":::\n"
             ]
         },
