--- a/book/ml_principles/structured/trees.ipynb
+++ b/book/ml_principles/structured/trees.ipynb
@@ -15,12 +15,13 @@
                 "- **{ref}`Ongebalanceerdheid <target-imbalance>`**\n",
                 "- **Grote (big) datavolumes**\n",
                 "- **Aantrekkelijk voor geautomatiseerde ML (AutoML)**\n",
+                "  Ter illustratie:\n",
                 "    - [auto-sklearn](https://automl.github.io/auto-sklearn/master/)\n",
                 "    - [TPOT](https://epistasislab.github.io/tpot/latest/)\n",
                 "    - [Ludwig](https://ludwig.ai/latest/user_guide/automl/)\n",
                 "    - [AutoGluon](https://auto.gluon.ai/stable/index.html)\n",
                 "    - ...\n",
-                "- **Meestal op basis van _decision tree_ modellen**\n",
+                "- **Meestal op basis van _ensembles_ van _decision tree_ modellen**\n",
                 ":::"
             ]
         },
@@ -30,7 +31,7 @@
             "metadata": {},
             "source": [
                 "## _Decision Tree_ modellen\n",
-                "Patroonherkenning in gestructureerde (en in bepaalde gevallen ook semi-gestructureerde) data is vaak zeer succesvol met zogenaamde **_decision tree_** modellen en voornamelijk de **_ensemble learning_** varianten hiervan.\n",
+                "Patroonherkenning in gestructureerde (en in bepaalde gevallen ook semi-gestructureerde) data is vaak zeer succesvol met zogenaamde **_decision tree_** modellen en voornamelijk de **_ensemble learning_** varianten hiervan (zie {ref}`random forests <target-random-forests>` en {ref}`gradient boosted trees <target-boosting>` verder in deze sectie).\n",
                 "\n",
                 "(target-decision-tree)=\n",
                 "**Een _decision tree_ model bestaat uit een boomstructuur waarbij iedere vertakking voor een bepaalde feature staat die opgesplitst wordt**.\n",
@@ -172,7 +173,7 @@
             "metadata": {},
             "source": [
                 "### Features\n",
-                "(target-decision-tree-features)\n",
+                "(target-decision-tree-features)=\n",
                 "Decision tree modellen kunnen algemeen gesproken flexibel om met veel en heterogene features, wat een typische eigenschap is van gestructureerde data. Ze hebben ook een natuurlijke manier om belangrijke van minder belangrijke features te onderscheiden. Op iedere niveau worden alle features in overweging genomen, maar enkel de meest _informatieve_ wordt gebruikt. Daardoor komen minder informatieve features automatisch naar diepere vertakkingen geduwd en worden niet-informatieve features automatisch geweerd uit het model. Er is dus een **natuurlijke feature selectie**.\n",
                 "\n",
                 ":::{note} 🌍 Iris data\n",
@@ -284,7 +285,7 @@
                 "\n",
                 "### Evaluatie\n",
                 "Om de performantie van _decision trees_ te evalueren wordt in de eerste plaats gekeken naar de _scoring metrics_ die ook de training sturen (_Gini impurity/Entropy/Misclassification rate/MSE/MAR/R²/etc._).\n",
-                "**Omdat er een reëel gevaar bestaat voor _overfitting_ wordt veel belang gehecht aan de performantie bij ongeziene test data**.\n",
+                "**Omdat er een reëel gevaar bestaat voor _{ref}`over fitting <target-over-fitting>`_ wordt veel belang gehecht aan de performantie bij ongeziene test data**.\n",
                 "\n",
                 "### Voordelen\n",
                 "- Interpreteerbaarheid: Iedere vertakking heeft een duidelijke betekenis\n",
@@ -294,9 +295,9 @@
                 "### Nadelen\n",
                 "- _Greedy_ optimalisatie geeft geen garantie op een globaal optimale boomstructuur\n",
                 "- Onstabiliteit: kleine aanpassingen aan de data kunnen een groot verschil geven in de boomstructuur\n",
-                "- Moeite met lineaire relaties: hoewel ze heel goed om kunnen met niet-lineariteit, moeten ze (te) veel splits maken om een lineair verband te leren\n",
+                "- Moeite met lineaire relaties: hoewel ze heel goed om kunnen met niet-lineariteit, moeten ze (te) veel splits maken om een niet-lineair verband te leren\n",
                 "- Moeite met extrapolatie: ze kunnen enkel splits en predicties maken in de range van de trainingsdata \n",
-                "- **Overfitting**: het aantal parameters kan ongecontroleerd groeien waardoor er overfitting optreedt"
+                "- **{ref}`Over fitting <target-over-fitting>`**: het aantal parameters kan ongecontroleerd groeien waardoor er _over fitting_ optreedt"
             ]
         },
         {
@@ -306,10 +307,10 @@
             "source": [
                 "## _Random Forests_\n",
                 "(target-random-forests)=\n",
-                "Het concept van _random forests_ is om **verschillende _decision trees_ te trainen op verschillende subsets van de data en de output van die modellen te aggregeren in een finale predictie**. Het behoort daarom tot de klasse van zogenoemde **_ensemble_ leeralgoritmes**. Algemeen gesproken, worden bij _ensemble_ technieken **predicties van verschillende modellen gecombineerd om tot een betere performantie te komen**.\n",
+                "Het concept van _random forests_ is om **verschillende _decision trees_ (een _forest_) te trainen op verschillende subsets van de data en de output van de individuele modellen te aggregeren in een finale predictie**. Het behoort daarom tot de klasse van zogenoemde **_ensemble_ leeralgoritmes**. Algemeen gesproken, worden bij _ensemble_ technieken **predicties van verschillende modellen gecombineerd om tot een betere performantie te komen**.\n",
                 "  \n",
-                "(target-bootstrap-sampling)\n",
-                "De naam _random forests_ verwijst naar het feit dat de methode gebaseerd is random **_bootstrap sampling_**[^bootstrap]. Er worden verschillende **nieuwe datasets gecreëerd door random samples te nemen uit de training data mét _teruglegging_ zodanig dat er telkens een even grote dataset wordt bekomen als bij de originele trainingsdata**. Er worden doorgaans ook verschillende subsets van de features gebruikt in de verschillende individuele _decision trees_.\n",
+                "(target-bootstrap-sampling)=\n",
+                "De naam _random forests_ verwijst ook naar het feit dat de methode gebaseerd is op _random bootstrap sampling_[^bootstrap]. Voor iedere nieuwe _decision tree_, wordt een nieuwe dataset gecreëerd door random samples te nemen uit de training data (mét teruglegging zodanig dat er telkens een even grote dataset wordt bekomen als bij de originele trainingsdata). Er wordt doorgaans ook een verschillende subset van de features gebruikt bij elke nieuwe _decision tree_.\n",
                 "\n",
                 "### Voordelen\n",
                 "- Consistentie: Predicties zijn veel beter bestand tegen kleine aanpassingen in de data\n",
