Update terminology and metadata in vision introduction notebook

--- a/book/ml_principles/vision/intro.ipynb
+++ b/book/ml_principles/vision/intro.ipynb
@@ -11,13 +11,13 @@
     "  \n",
     "In tegenstelling tot gestructureerde data waar we werken met tabulaire gegevens, hebben we hier te maken met beelden (RGB, RGB-D, hyper-spectraal, point-cloud) en sequenties daarvan. Het zijn bij uitstek voorbeelden van **ongestructureerde data**.  \n",
     "  \n",
-    "Alles draait om de **automatische extractie van visuele features**. Daar waar dit lang gebeurde op basis van deterministische filters, brachten CNNs de mogelijkheid om die filters rechtstreeks uit de data te leren wat een enorme sprong in performantie en flexibiliteit met zich meebracht.  \n",
+    "Alles draait om de **automatische extractie van visuele patronen**. Daar waar dit lang gebeurde op basis van deterministische filters, brachten CNNs de mogelijkheid om die filters rechtstreeks uit de data te leren wat een enorme sprong in performantie en flexibiliteit met zich meebracht.  \n",
     "\n",
     "\n",
-    ":::{note} 🌍\n",
+    ":::{note} 🌍 Deterministische filter\n",
     ":icon: false\n",
-    ":class: simple \n",
-    "Een voorbeeld van **deterministische feature extractie** is het _Canny edge detection_ algoritme.\n",
+    ":class: dropdown \n",
+    "Een voorbeeld van een deterministische filter is het _Canny edge detection_ algoritme.\n",
     "\n",
     "[![](https://img.shields.io/badge/Wikipedia-000?logo=wikipedia&logoColor=fff&style=flat)](https://en.wikipedia.org/wiki/Canny_edge_detector)\n",
     "\n",
@@ -36,7 +36,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -48,7 +52,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -112,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Neurale netwerkmodellen kunnen veel flexibeler ingezet worden doordat ze zelf op zoek gaan naar de meest gepaste feature extractie. De laatste jaren is die flexibiliteit nog veel groter geworden door de komst van zogenaamde **_foundation_ modellen**. Dit zijn doorgaans zeer grote (_large_) modellen die met enorme hoeveelheden beelden getraind zijn met ook verschillende taken (object detectie, segmentatie, captioning enz.). Ze hebben een enorme **generalisatie** capaciteit. Dit wil zeggen dat ze erg goede performantie behalen bij ongezien data. AI engineers kunnen daardoor meer en meer een beroep doen op **vooraf getrainde of _pretrained_** modellen die zonder of met minimale extra training ingezet kunnen worden.\n",
+    "Neurale netwerkmodellen kunnen veel flexibeler ingezet worden doordat ze zelf op zoek gaan naar de meest gepaste feature extractie. De laatste jaren is die flexibiliteit nog veel groter geworden door de komst van zogenaamde_foundation_ modellen. Dit zijn doorgaans zeer grote (_large_) modellen die met enorme hoeveelheden beelden getraind zijn met ook verschillende taken (object detectie, segmentatie, captioning enz.). Ze hebben een enorme generalisatie capaciteit. Dit wil zeggen dat ze erg goede performantie behalen bij ongezien data. AI engineers kunnen daardoor meer en meer een beroep doen op vooraf getrainde of _pretrained_ modellen die zonder of met minimale extra training ingezet kunnen worden.\n",
     "\n",
     ":::{note} 🌍\n",
     ":icon: false\n",
@@ -124,7 +132,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -136,7 +148,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "model_id = \"microsoft/Florence-2-base\"\n",
@@ -149,7 +165,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "def run_example(task_prompt, text_input=None):\n",
@@ -206,7 +226,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "def plot_bbox(data):\n",
@@ -288,7 +312,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "def draw_ocr_bboxes(prediction, scale=1):\n",
@@ -444,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
