--- a/book/math_foundations/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/lineaire_regressie/grid.ipynb
@@ -9,13 +9,13 @@
                 "# Introductie\n",
                 "**Lineaire regressie** is een centraal **model** binnen Machine Learning. Om de wiskunde van ML te begrijpen is het een absolute _must_ om dit model - en vooral ook de geassocieerde leeralgoritmes - ten volle te doorgronden. Het model komt uit de statistiek en veronderstelt dat **bepaalde target data (\"_responsvariabele(n)_\" genoemd in de statistiek) in lineair verband staan met één of meerdere features (ook wel \"_predictoren_\" genoemd in de de statistiek**).  \n",
                 "  \n",
-                "## Data simulatie\n",
                 "(target-coffee-simulation)=\n",
-                "We beginnen met de simulatie van een simpele situatie. Stel dat er in een ideale wereld (voor koffiehuizen) een lineare relatie bestaat tussen de grootte van een bestelling en de fooi die klanten erbovenop betalen:\n",
+                "## Data simulatie\n",
+                "We beginnen met de simulatie van een simpele situatie. Stel dat er in een ideale wereld (voor koffiehuizen) een lineaire relatie bestaat tussen de grootte van een bestelling en de fooi die klanten erbovenop betalen:\n",
                 "$$\n",
                 "y = b_1 + b_2x\n",
                 "$$\n",
-                "waarbij $y$ de grootte van de fooi is, $b_1$ een basis fooi en $b_2$ een multiplicatieve factor voor de prijs van de aankoop.  \n",
+                "waarbij $y$ de grootte van de fooi is, $b_1$ een basis fooi en $b_2$ een multiplicatie factor voor de prijs van de aankoop.  \n",
                 "Het _probleem_ dat we willen oplossen is het achterhalen van $b_1$ en $b_2$.  \n",
                 "We verzamelen daarvoor data van 50 aankopen en houden er rekening mee dat er een meetfout zal zijn: de lineaire relatie zal niet altijd perfect zijn.  \n",
                 "Ons model voor de data is het volgende:\n",
