--- a/book/ml_principles/basics/evaluation.ipynb
+++ b/book/ml_principles/basics/evaluation.ipynb
@@ -12,7 +12,59 @@
                 "Als er een _loss_ functie gebruikt wordt tijdens het trainen, geeft de waarde daarvan een eerste indicatie van de model-performantie. De _loss_ functie geeft echter niet noodzakelijk rechtstreeks een zicht op taakprestaties. Daarom worden tal van andere _ scoring metrics_ gebruikt, afhankelijk van de specifieke taak.  \n",
                 "  \n",
                 "We zullen zien dat er verschillende _metrics_ gangbaar zijn, afhankelijk van de taakcontext (bv. klassificatie, regressie, enz.) en het specifieke domein (bv. computervisie, NLP, enz.; zie [_scikit-learn metrics_ module](https://scikit-learn.org/stable/api/sklearn.metrics.html#module-sklearn.metrics) en [_scikit-learn scoring guide_](https://scikit-learn.org/stable/modules/model_evaluation.html#metrics-and-scoring-quantifying-the-quality-of-predictions)).  \n",
+                "\n",
+                ":::{note} _Precision_ & _Recall_\n",
+                ":class: dropdown\n",
+                "(target-accuracy)=\n",
+                "In de context van klassificatie, kijken we in de eerste plaats naar de _accuracy_ score; het percentage juist voorspelde categorieën.  \n",
+                "In onderstaande _confusion matrix_ is de _accuracy_ $100 \\times \\frac{45+38+35}{45+3+2+2+38+1+1+4+35}$\n",
+                "```\n",
+                "                 Voorspeld\n",
+                "               Kat  Hond  Vogel\n",
+                "Werkelijk Kat   45    3     2\n",
+                "          Hond   2   38     1\n",
+                "          Vogel  1    4    35\n",
+                "```\n",
                 "  \n",
+                "Daarnaast wordt bij _binaire_ klassificatie (bv. Kat|hond) ook gekeken naar de verdeling van het aantal _true positives_ (TP), _false positives_ (FP), _true negatives_ (TN) en _false negatives_ (FN).\n",
+                "\n",
+                "```\n",
+                "                   Voorspeld\n",
+                "                 Kat(+)  Hond(-)\n",
+                "Werkelijk Kat(+)   45        3\n",
+                "          Hond(-)   2       38\n",
+                "```\n",
+                "\n",
+                "$TP = \\frac{45}{47}$,\n",
+                "$FP = \\frac{2}{47}$,\n",
+                "$TN = \\frac{38}{41}$ en\n",
+                "$FN = \\frac{3}{41}$\n",
+                "  \n",
+                "Hieraan worden drie metrics gekoppeld:  \n",
+                "(target-precision)=\n",
+                "1. _Precision_: Fractie van positieve voorspellingen die correct zijn\n",
+                "\n",
+                "$$\n",
+                "Precision = \\frac{TP}{TP + FP}\n",
+                "$$\n",
+                "(target-recall)=  \n",
+                "2. _Recall_: Fractie van positieve instances die correct geïdentificeerd zijn\n",
+                "\n",
+                "$$\n",
+                "Recall = \\frac{TP}{TP + FN}\n",
+                "$$\n",
+                "\n",
+                "(target-F-score)=\n",
+                "3. _$F_1$-score_: Harmonisch gemiddelde van _precision_ en _recall_. De score groeit symmetrisch met toenemende _precision_ of _recall_.\n",
+                "$$\n",
+                "F_1 = 2 \\cdot \\frac{Precision \\cdot Recall}{Precision + Recall} = \\frac{2 \\cdot TP}{2 \\cdot TP + FP + FN}\n",
+                "$$\n",
+                "Een algemenere maat is de $F_{\\beta}-score$ waarbij een gewicht wordt toegekend om _precision_ meer of minder belang te geven ten opzichte van _recall_.\n",
+                "  \n",
+                "[![](https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Precisionrecall.svg/350px-Precisionrecall.svg.png)](https://en.wikipedia.org/wiki/F-score)\n",
+                ":::\n",
+                "  \n",
+                "\n",
                 "(target-validation)=\n",
                 "## Training, validatie en testing\n",
                 "Om zeker te zijn dat een model patronen leert te herkennen en niet gewoon de trainingsdata van buiten leert, is het cruciaal om de prestaties te evalueren op ongeziene data. **De capaciteit om juiste voorspellingen te maken met _nieuwe data_ wordt algemeen de _generalisatie_ capaciteit van het model genoemd**. Er wordt in die context standaard een onderscheid gemaakt tussen drie groepen data:  \n",
