--- a/book/ml_principles/basics/experience.ipynb
+++ b/book/ml_principles/basics/experience.ipynb
@@ -27,6 +27,7 @@
                 ":::{note} 🌍 _CIFAR-10_\n",
                 ":icon: false\n",
                 ":class: simple\n",
+                "(target-cifar)=\n",
                 "Een populaire _geannoteerde_ publieke dataset voor beeldherkenning is de [CIFAR-10](https://www.cs.toronto.edu/~kriz/cifar.html) dataset.\n",
                 "De dataset bestaat uit RGB foto's met een resolutie van 32x32 pixels voor 10 categorieën: 'airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck'.  \n",
                 "De bedoeling is om een ML model te ontwikkelen dat toelaat om, bij een willekeurige nieuwe foto (met resolutie 32x32), te beslissen of het om één van de gegeven _classes_ gaat. Wanneer we hier op zoek gaan naar de ideale parameter waarden van een model, hebben we in de training data voor iedere observatie van 3x32x32 waarden ook de _gewenste_ model output $y_i$ ter beschikking.\n",
