--- a/book/ml_principles/basics/tasks.ipynb
+++ b/book/ml_principles/basics/tasks.ipynb
@@ -12,19 +12,31 @@
                 "## Klassificatie (_Classification_)\n",
                 "Bij klassificatie is het de bedoeling om **discrete labels toe te wijzen aan data**. Denk aan het labelen van e-mails als \"spam\" of \"geen spam\", of het herkennen van verschillende soorten dieren/voorwerpen op foto's.  \n",
                 "  \n",
-                "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_classifier_comparison_001.png)](https://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html#sphx-glr-auto-examples-classification-plot-classifier-comparison-py) \n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown \n",
+                "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_classifier_comparison_001.png)](https://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html#sphx-glr-auto-examples-classification-plot-classifier-comparison-py)\n",
+                ":::\n",
                 "\n",
                 "(target-regression)=\n",
                 "## Regressie\n",
                 "Hier is het doel om een **continue, numerieke waarde te voorspellen**. Voorbeelden zijn het voorspellen van huizenprijzen, aankomsttijden (ETA's), de temperatuur van morgen of de aandelenkoers.  \n",
                 "  \n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown\n",
                 "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_tree_regression_001.png)](https://scikit-learn.org/stable/modules/tree.html#regression)\n",
+                ":::\n",
                 "\n",
                 "(target-transcription)=\n",
                 "## Transcriptie\n",
                 "Bij dit type taak moet het model (relatief) **ongestructureerde data vertalen naar een discrete, tekstuele vorm**. Bijvoorbeeld, bij _optical character recognition_ krijgt het computerprogramma een foto met een afbeelding van geschreven of getypte tekst te zien en wordt het gevraagd deze tekst terug te geven in de vorm van een reeks karakters. _Speech-to-text_ behoren ook tot dit type.  \n",
                 "  \n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown\n",
                 "[![Hugging Face Spaces](https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue)](https://huggingface.co/spaces/openai/whisper)\n",
+                ":::\n",
                 "\n",
                 "(target-translation)=\n",
                 "## Automatische vertaling\n",
@@ -34,31 +46,51 @@
                 "## Clustering\n",
                 "Het **groeperen van vergelijkbare data-punten**. Denk aan het groeperen van klanten in segmenten op basis van hun koopgedrag.   \n",
                 "\n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown\n",
                 "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_kmeans_digits_001.png)](https://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_digits.html#visualize-the-results-on-pca-reduced-data) \n",
+                ":::\n",
                 "\n",
                 "(target-dimensionality-reduction)=\n",
                 "## Dimensionaliteitsreductie\n",
                 "In bepaalde toepassingen willen we het model gebruiken om **hoog-dimensionele data te _compresseren_ in een lager dimensionele ruimte** met behoud van relevante afstanden tussen de data in de originele ruimte.  \n",
                 "  \n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown\n",
                 "[![](../../../img/tf_projector_mnist.png)](https://projector.tensorflow.org/)\n",
+                ":::\n",
                 "\n",
                 "(target-anomaly)=\n",
                 "## Anomaliedetectie\n",
                 "In deze taak is het de bedoeling om in een reeks events of objecten **ongewone of atypische voorbeelden te detecteren**. Een voorbeeld is het detecteren van kredietkaartfraude. Door iemands gewoonlijke aankoopgedrag te modelleren, kunnen banken bij plotse afwijkingen misbruik detecteren (en bv. kaarten blokkeren).\n",
                 "\n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown\n",
                 "[![](https://scikit-learn.org/stable/_images/sphx_glr_plot_anomaly_comparison_001.png)](https://scikit-learn.org/stable/auto_examples/miscellaneous/plot_anomaly_comparison.html)\n",
+                ":::\n",
                 "\n",
                 "(target-generation)=\n",
                 "## Generatie\n",
                 "Het voorbije decennium hebben we een enorme doorbraak gekend van zogenaamde _generatieve modellen_, zowel in het domein van beeld als van (natuurlijke en programmeer-)talen. **De taak bestaat er algemeen uit om aannemelijke nieuwe data te genereren**.\n",
                 "  \n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown\n",
                 "[![](https://docs.pytorch.org/tutorials/_images/sphx_glr_dcgan_faces_tutorial_003.png)](https://docs.pytorch.org/tutorials/beginner/dcgan_faces_tutorial.html)\n",
+                ":::\n",
                 "\n",
                 "(target-planning)=\n",
                 "## Actieplanning\n",
                 "Bij deze taak is het de bedoeling om **optimale actiesequenties te leren**, met het oog op het bereiken van een bepaald doel.\n",
                 "\n",
-                "[![](https://docs.pytorch.org/tutorials/_images/mario.gif?raw=true)](https://docs.pytorch.org/tutorials/intermediate/mario_rl_tutorial.html)"
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: dropdown\n",
+                "[![](https://docs.pytorch.org/tutorials/_images/mario.gif?raw=true)](https://docs.pytorch.org/tutorials/intermediate/mario_rl_tutorial.html)\n",
+                ":::"
             ]
         }
     ],
