--- a/book/ml_principles/basics/training.ipynb
+++ b/book/ml_principles/basics/training.ipynb
@@ -253,7 +253,9 @@
             "metadata": {},
             "source": [
                 "\n",
-                "## (On)gebalanceerdde trainingsdata en _bias_\n",
+                "## Trainingsdata voorbereiden\n",
+                "\n",
+                "### (On)gebalanceerdde trainingsdata en _bias_\n",
                 "(target-imbalance)=\n",
                 "**Ongebalanceerdheid** van trainingsdata verwijst naar het fenomeen waarbij **bepaalde categorieën** (bv. hond/kat) **of continue waarden** (bv. leeftijden) **over- of ondervertegenwoordigd zijn in de trainingsdata**. Dit kan louter het gevolg zijn van natuurlijke _scheefheid_ ofwel een gevolg van de specifieke manier van trainingsdataverzameling. Dit is een algemeen aandachtspunt bij trainingsdata die op natuurlijke wijze verkregen zijn (bv. verkooptransacties, server logs, enz.). Naargelang de ernst van ongebalanceerdheid, leidt het tot **_statistische bias_**. Dit verwijst naar het fenomeen waarbij **getrainde modellen _systematische_ predictiefouten maken en dus bepaalde _voorkeuren_ hebben ontwikkeld**.  \n",
                 "  \n",
