--- a/book/ml_principles/labo/taco.ipynb
+++ b/book/ml_principles/labo/taco.ipynb
@@ -11,27 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gebaseerd op: [https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s](https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s)"
+    "Navigeer naar deze notebook op GitHub: [https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labo/taco.ipynb](https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labo/taco.ipynb)  \n",
+    "  \n",
+    "Via bovenstaande link kan je deze notebook openen in Google Colaboratory. In die omgeving kunnen we gebruik maken van gratis quota voor GPUs (en TPUs). GPU acceleratie is hier sterk aanbevolen voor zowel model training als model inference.  \n",
+    "  \n",
+    "Deze notebook is gebaseerd op: [https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s](https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup\n",
-    "\n",
-    "Eenmalige installatie van het [ultralitics](https://github.com/ultralytics/ultralytics) package.\n",
-    "\n",
-    "## Colab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colab = True"
+    "# Colab setup\n",
+    "- Als je de notebook voor het eerst opent op Colab, kies je in het menu rechts bovenaan `Connect > Change runtime type`: `Python 3` en `T4 GPU`.\n",
+    "- Pas nadat de GPU Runtime is opgestart ga je verder met onderstaande installatie van het [ultralitics](https://github.com/ultralytics/ultralytics) package.\n",
+    "- ⚠️ Bij deze waarschuwing `Warning: This notebook was not authored by Google` selecteer je `Run anyway`."
    ]
   },
   {
@@ -41,50 +35,6 @@
    "outputs": [],
    "source": [
     "!pip install ultralytics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dev Container"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# colab = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-11T15:36:30.997344Z",
-     "iopub.status.busy": "2025-04-11T15:36:30.996897Z",
-     "iopub.status.idle": "2025-04-11T15:36:34.50727Z",
-     "shell.execute_reply": "2025-04-11T15:36:34.505985Z",
-     "shell.execute_reply.started": "2025-04-11T15:36:30.997305Z"
-    },
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    "# !uv add ultralytics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fix automatic installation of opencv-python instead of opencv-python-headless\n",
-    "#!uv pip uninstall opencv-python && uv pip install --reinstall opencv-python-headless"
    ]
   },
   {
@@ -121,6 +71,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Colab-specific: set datasets directory for Ultralytics package\n",
+    "with open(\"/root/.config/Ultralytics/settings.json\") as f:\n",
+    "    settings = json.load(f)\n",
+    "    settings[\"datasets_dir\"] = \"/contents\"\n",
+    "\n",
+    "with open(\"/root/.config/Ultralytics/settings.json\", \"w\") as f:\n",
+    "    json.dump(settings, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,19 +110,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if colab:\n",
-    "    with open(\"/root/.config/Ultralytics/settings.json\", \"r\") as f:\n",
-    "        settings = json.load(f)\n",
-    "        settings[\"datasets_dir\"] = \"/contents\"\n",
-    "\n",
-    "    with open(\"/root/.config/Ultralytics/settings.json\", \"w\") as f:\n",
-    "        json.dump(settings, f)\n",
-    "\n",
-    "    # Copy the contents of the directory instead of moving it\n",
-    "    destination = os.path.basename(path)\n",
-    "    if not os.path.exists(destination):\n",
-    "        shutil.copytree(path, destination)\n",
-    "    path = \"./taco-dataset-yolo-format\""
+    "# Copy the contents of the directory instead of moving it\n",
+    "destination = os.path.basename(path)\n",
+    "if not os.path.exists(destination):\n",
+    "    shutil.copytree(path, destination)\n",
+    "path = \"./taco-dataset-yolo-format\""
    ]
   },
   {
@@ -287,7 +244,7 @@
     "\n",
     "# Plot the distribution\n",
     "plt.figure(figsize=(12, 5))\n",
-    "sns.barplot(x=\"Class\", y=\"Count\", data=df, palette=\"viridis\")\n",
+    "sns.barplot(x=\"Class\", y=\"Count\", data=df, hue=\"Class\", palette=\"viridis\")\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"Class Distribution in Training Data\")\n",
     "plt.show()\n"
@@ -377,7 +334,7 @@
    "outputs": [],
    "source": [
     "# Define training parameters\n",
-    "epochs = 5  # 50\n",
+    "epochs = 50\n",
     "batch_size = 32\n",
     "imgsz = 640  # Image size\n",
     "optimizer_type = \"AdamW\"  # AdamW optimizer (recommended for better regularization)\n",
@@ -408,6 +365,7 @@
     "model = YOLO(\"yolov8s.pt\")\n",
     "\n",
     "save_dir = \"./runs/train/exp\"\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
     "\n",
     "# Train model with Cosine Annealing learning rate scheduler\n",
     "model.train(\n",
@@ -828,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
