update glossary titles

--- a/book/math_foundations/linalg/why_tensors.ipynb
+++ b/book/math_foundations/linalg/why_tensors.ipynb
@@ -5,7 +5,7 @@
             "id": "6c7a6615",
             "metadata": {},
             "source": [
-                "# Waarom vectoren, matrices en tensors?\n",
+                "# Waarom tensors?\n",
                 "Oorspronkelijk werden vectoren in de meetkunde en de mechanica geïntroduceerd om grootheden voor te stellen die zowel een grootte als een richting hebben, zoals verplaatsingen, krachten, versnelling, enz.\n",
                 "In dezelfde context werden matrices gebruikt om lineaire transformaties tussen vector-ruimtes voor te stellen.\n",
                 "In Machine Learning worden vectoren, matrices en tensors veel algemener gebruikt als _containers_ voor data en model parameters omwille van:\n",
