--- a/book/ml_principles/labs/imgrec_taco_train.ipynb
+++ b/book/ml_principles/labs/imgrec_taco_train.ipynb
@@ -6,7 +6,7 @@
         "id": "x3bDMYHj5XFV"
       },
       "source": [
-        "[![](https://img.shields.io/static/v1?message=Open%20in%20Colab&logo=googlecolab&labelColor=grey&color=yellow&logoColor=white&label=%20&style=flat-square)](https://colab.research.google.com/github/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imgrec_taco_#2.ipynb)"
+        "[![](https://img.shields.io/static/v1?message=Open%20in%20Colab&logo=googlecolab&labelColor=grey&color=yellow&logoColor=white&label=%20&style=flat-square)](https://colab.research.google.com/github/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imgrec_taco_train.ipynb)"
       ]
     },
     {
@@ -15,11 +15,9 @@
         "id": "8USnnIv_5XFZ"
       },
       "source": [
-        "Navigeer naar deze notebook op GitHub: [https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labo/taco.ipynb](https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labo/taco.ipynb)  \n",
+        "Navigeer naar deze notebook op GitHub: [https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imgrec_taco_train](https://github.com/ap-mdi-it/ml-courses/blob/main/book/ml_principles/labs/imgrec_taco_train)  \n",
         "  \n",
-        "Via bovenstaande link kan je deze notebook openen in Google Colaboratory. In die omgeving kunnen we gebruik maken van gratis quota voor GPUs (en TPUs). GPU acceleratie is hier sterk aanbevolen voor zowel model training als model inference.  \n",
-        "  \n",
-        "Deze notebook is gebaseerd op: [https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s](https://www.kaggle.com/code/shuvosharkr/taco-trash-detection-yolov8s)"
+        "Via bovenstaande link kan je deze notebook openen in Google Colaboratory. In die omgeving kunnen we gebruik maken van gratis quota voor GPUs (en TPUs). GPU acceleratie is hier sterk aanbevolen voor zowel model training als model inference."
       ]
     },
     {
